<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_text">no text here</string>
    <string name="app_name">Engine Driver 3</string>
    <string name="app_theme">Theme.Sherlock</string>
    <string name="exit">Exit</string>
    <string name="settings">Function Defaults</string>
    <string name="fb_label">Function Label</string>
    <string name="function_buttons">function_buttons</string>
    <string name="app_description">Engine Driver - JMRI Throttle for your Android phone.  This application can connect to a JMRI WiThrottle server running on a PC, and in turn control your locomotives. Speed, direction, and up to 29 DCC functions are supported for one or two locomotives. </string>
    <string name="app_name_connect">Engine Driver - Connect to JMRI WiThrottle</string>
    <string name="app_name_throttle">Engine Driver - Throttle</string>
    <string name="app_name_power_control">Engine Driver - Power Control</string>
    <string name="app_name_routes">Engine Driver - Routes</string>
    <string name="app_name_turnouts">Engine Driver - Turnouts</string>
    <string name="app_name_about">Engine Driver - About</string>
    <string name="app_name_web">Engine Driver - Web</string>
    <string name="app_name_functions">Engine Driver - Default Function Settings</string>
    <string name="app_name_preferences">Engine Driver - Preferences</string>
    <string name="app_name_select_loco">Engine Driver - Select Loco</string>
    <string name="host_ip">Host Name or Address</string>
    <string name="port">Port</string>
    <string name="loco_address">Loco Address</string>
    <string name="connect_button">Connect</string>
    <string name="recent_connections">Recent Connections</string>
    <string name="select_loco">Enter Locomotive Address to Acquire</string>
    <string name="acquire_button">Acquire</string>
    <string name="roster_list">-OR- Select from Roster/Consist Entries</string>
    <string name="recent_engines">-OR- Select from Recent Locomotives</string>
    <string name="direction">Fwd</string>
    <string name="speed">Speed:</string>
    <string name="discovered_services">Discovered Servers</string>
    <string name="save_settings">Save Settings</string>
    <string name="stop">Stop</string>
    <string name="forward">Forward</string>
    <string name="reverse">Reverse</string>
    <string name="none">None</string>
    <string name="fb_helptext">Enter labels and function#s in list at right.  Leave label blank to hide button.  These are used when roster functions are not available.</string>
    <string name="copy_function_labels">Copy Labels from Roster</string>
    <string name="fb_header">Edit Functions</string>
    <string name="about">About</string>
    <string name="web">Web</string>
    <string name="loco">Loco:</string>
    <string name="current_locos">Currently Selected Locos</string>
    <string name="release">Release</string>
    <string name="turnouts">Turnouts</string>
    <string name="turnouts_label">Control Turnouts</string>
    <string name="turnouts_direct_entry_label">Enter turnout# and Close, Throw or Toggle</string>
    <string name="turnouts_location_label">Selected Location</string>
    <string name="turnouts_list_label">Turnouts (click state to toggle)</string>
    <string name="location_all">ALL LOCATIONS</string>
    <string name="routes">Routes</string>
    <string name="routes_label">Control Routes</string>
    <string name="routes_direct_entry_label">Enter route# and press Set</string>
    <string name="routes_location_label">Selected Location</string>
    <string name="routes_default_prefix">R</string>
    <string name="throw_button">Throw</string>
    <string name="close_button">Close</string>
    <string name="toggle_button">Toggle</string>
    <string name="power_control_label">Control Layout Power Setting</string>
    <string name="power_control_button">unknown</string>
    <string name="press_to_toggle">Press button to toggle layout power state.</string>
    <string name="power_control_not_allowed">Power Control not allowed.  Change in WiThrottle Preferences in JMRI.</string>
	<string name="fs_edit_notice">WARNING: changes to Default Functions Setttings will be lost on exit - No SD Card found.</string>
	<string name="ca_recent_conn_notice">Recent Connections unavailable - No SD Card found.</string>
	<string name="sl_recent_engine_notice">Recent Locos unavailable - No SD Card found.</string>
		<string name="power">Power</string>
    <string name="throttle">Throttle</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="set">Set</string>
    <string name="disabled">Disabled</string>
    <string name="volume_indicator">v</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_text">Exit Engine Driver?</string>
    <string name="exit_title">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="RightButton"><![CDATA[>>]]></string>
    <string name="LeftButton"><![CDATA[<<]]></string>
    <string name="notificationTitle">Engine Driver 3 is running</string>
    <string name="notificationText">Tap to reopen Engine Driver 3</string>


</resources>