<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/ip_label"
            style="@style/floating_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_ip" />
        <EditText
            android:id="@+id/etHostIp"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/ip_label"
            android:maxLength="60"
            android:singleLine="true" />
        <EditText
            android:id="@+id/etPort"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/etHostIp"
            android:layout_toRightOf="@id/etHostIp"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true" />
        <TextView
            style="@style/floating_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/etPort"
            android:layout_alignLeft="@id/etPort"
            android:text="@string/port" />
        <Button
            android:id="@+id/btnConnect"
            style="@style/normal_button_style"
            android:layout_width="fill_parent"
            android:layout_alignBottom="@id/etPort"
            android:layout_toRightOf="@id/etPort"
            android:minWidth="7dp"
            android:text="@string/connect_button" />
    </RelativeLayout>
    <TextView
        style="@style/small_heading_style"
        android:text="@string/discovered_services" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:background="#00000000"
        android:orientation="vertical" >
        <ListView
            android:id="@+id/discovered_server_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:footerDividersEnabled="true" >
        </ListView>
    </LinearLayout>
    <TextView
        style="@style/small_heading_style"
        android:id="@+id/recent_connections_heading"
        android:text="@string/recent_connections" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.67"
        android:background="#00000000"
        android:orientation="vertical" >
        <ListView
            android:id="@+id/server_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:footerDividersEnabled="true" >
        </ListView>
    </LinearLayout>
    <TextView
        android:id="@+id/cf_footer"
        style="@style/floating_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none" />
</LinearLayout>