<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/throttle_screen_wrapper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/loco_buttons_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:baselineAligned="false">
        <RelativeLayout
            android:id="@+id/loco_cell"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".73" >
            <Button
                android:id="@+id/btnSelectLoco"
                style="@style/normal_button_style"
                android:layout_width="fill_parent"
                android:layout_alignParentRight="true"
                android:text="@string/none"
                android:lines="2" />
            <TextView
                android:id="@+id/label_Loco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:shadowColor="#FFFFFFFF"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/loco"
                android:textColor="#666666" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/speed_cell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".27" >
            <TextView
                android:id="@+id/tvSpeedUnits"
                style="@style/floating_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:textSize="12sp"
                android:text="%" />
            <TextView
                android:id="@+id/tvSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="0"
                android:textSize="36sp"
                android:lines="1" />
        </RelativeLayout>
    </LinearLayout>
    <TableLayout
        android:id="@+id/dir_buttons_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2" >
        <TableRow>
            <Button
                android:id="@+id/btnForward"
                style="@style/large_button_style"
                android:lines="1"
                android:text="@string/forward" />
            <Button
                android:id="@+id/btnStop"
                style="@style/stop_button_style"
                android:lines="1"
                android:text="@string/stop" />
            <Button
                android:id="@+id/btnReverse"
                style="@style/large_button_style"
                android:lines="1"
                android:text="@string/reverse" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/throttle_setspeed"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btnSpeedDecrease"
            style="@style/normal_button_style"
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="match_parent"
            android:text="@string/LeftButton"/>
        <SeekBar
            android:id="@+id/sbSpeedSlider"
            android:layout_width="0dip"
            android:layout_weight="0.7"
            android:layout_height="match_parent"
            android:maxHeight="80dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >
        </SeekBar>
        <Button
            android:id="@+id/btnSpeedIncrease"
            style="@style/normal_button_style"
            android:layout_width="0dip"
            android:layout_weight="0.15"
            android:layout_height="match_parent"
            android:text="@string/RightButton"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/function_buttons_scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/function_buttons_linear_layout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
    </ScrollView>

</LinearLayout>